--- a/index.html
+++ b/index.html
@@ -80,10 +80,11 @@
       </section>
       <!--segunda seccion reto 2-->
       <section class="plataforma">
-        <section class="seccion-container">
+        <div class="seccion-container">
           <p class="titulo">Unified platform</p>
           <h2>All the payment products you'll ever need</h2>
-          <section class="parrafo-columnas">
+
+          <div class="parrafo-columnas">
             <p>
               We've got everything you'll need and more to build websites and
               apps that handle payments, payouts, and much more. Swipe’s
@@ -91,23 +92,23 @@
               businesses, software platforms & marketplaces, and everything in
               between.
             </p>
-          </section>
-          <section class="segundo-parrafo">
+          </div>
+          <div class="segundo-parrafo">
             <p>
               We also help companies tackle fraud, issue invoices, send virtual
               and physical cards, manage financing, wrangle business spend, and
               much more.
             </p>
-          </section>
-        </section>
+          </div>
+        </div>
       </section>
       <button class="start now">
         Start now <i class="fa-solid fa-arrow-right"></i>
       </button>
       <!-- imagenes seccion 2-->
       <section class="integracion-container">
-        <section class="integracion-imagenes">
-          <section class="imagennes">
+        <div class="integracion-imagenes">
+          <div class="imagennes">
             <img
               src="/imagenes-reto2/credit-card.png"
               alt="card"
@@ -120,12 +121,12 @@
             />
             <img src="/imagenes-reto2/dash.png" alt="dash" width="300px" />
             <img src="/imagenes-reto2/phone.png" alt="phone" width="200px" />
-          </section>
-        </section>
+          </div>
+        </div>
       </section>
       <section>
-        <section class="reto3">
-          <section class="two-column">
+        <div class="reto3">
+          <div class="two-column">
             <p class="subtitulo">Designed For Engineers</p>
             <h2>The world’s best and most intuitive APIs</h2>
             <p>
@@ -133,12 +134,12 @@
               building good technology, instead of spending time and money
               reinventing the wheel.
             </p>
-          </section>
+          </div>
           <button class="button-icono">
             Start now<i class="fa-solid fa-arrow-right"></i>
           </button>
           <section class="card-container">
-            <section class="cardd">
+            <div class="cardd">
               <img src="/imagenes-reto3/cube-icon.png" />
 
               <h3>Tools for all stacks</h3>
@@ -159,7 +160,7 @@
               <button>
                 Explore partners<i class="fa-solid fa-arrow-right"></i>
               </button>
-            </section>
+            </div>
             <section>
               <img src="/imagenes-reto3/api-code.png" alt="api" width="200px" />
               <img
@@ -169,7 +170,7 @@
               />
             </section>
           </section>
-        </section>
+        </div>
       </section>
     </main>
     <script
